--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div>
-      <img src="logo.svg">
-      Coming soon.
+    <div id="page">
+      <div id="block">
+        <img src="logo.svg">
+        <br>
+        <br>
+        Coming soon.
+      </div>
     </div>
   </body>
 </html>
